# cobaya_lya_p1d

./: README.md  pyproject.toml
cobaya_lya_p1d/: cobaya_lya_p1d.py  desi_dr1.yaml  example.yaml  sdss_dr14a.yaml  sdss_dr14b.yaml  sdss_dr2.yaml  sdss_dr9.yaml
